updated cart utils to group items in cart reducer

--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -1,5 +1,7 @@
 .custom-button {
   cursor: pointer;
+  display: flex;
+  justify-content: center;
   min-width: 165px;
   width: auto;
   height: 50px;
@@ -11,10 +13,10 @@
   font-size: 15px;
   background-color: black;
   color: white;
+  border: 1px solid transparent;
   text-transform: uppercase;
   font-family: 'Open Sans Condensed';
   font-weight: bolder;
-  border: 1px solid transparent;
   transition: all 0.25s ease;
 
   &:hover {
@@ -31,6 +33,19 @@
     &:hover {
       background-color: #357ae8;
       border: 1px solid #357ae8;
+      transition: all 0.25s ease;
+    }
+  }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: 1px solid transparent;
       transition: all 0.25s ease;
     }
   }
