--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -2,21 +2,52 @@
   width: 22%;
   display: flex;
   flex-direction: column;
-  height: 350px;
+  height: 356px;
   align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
 
-  .image {
+  .image-wrapper {
     width: 100%;
     height: 95%;
+    margin-bottom: 5px;
+    overflow: hidden;
+  }
+
+  .image {
+    height: 100%;
     background-size: cover;
     background-position: center;
-    margin-bottom: 5px;
+    transition: all 0.25s ease;
+  }
+
+  .custom-button {
+    width: 80%;
+    opacity: 0.7;
+    position: absolute;
+    top: -60px;
+    margin: 0 auto;
+  }
+
+  &:hover {
+    .image {
+      opacity: 0.8;
+      transform: scale(1.1);
+      transition: all 0.25s ease;
+    }
+
+    .custom-button {
+      opacity: 0.85;
+      top: 245px;
+    }
   }
 
   .collection-footer {
     width: 100%;
-    height: 5%;
+    z-index: 20;
     display: flex;
+    background-color: white;
     justify-content: space-between;
     font-size: 18px;
 
