--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -19,6 +19,19 @@
   font-weight: bolder;
   transition: all 0.25s ease;
 
+  &:disabled {
+    cursor: not-allowed;
+    background-color: rgba($color: #000000, $alpha: 0.7);
+    color: white;
+    border: 1px solid transparent;
+
+    &:hover {
+      background-color: rgba($color: #000000, $alpha: 0.5);
+      color: white;
+      border: 1px solid transparent;
+    }
+  }
+
   &:hover {
     background-color: white;
     color: black;
